--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-qrscanner": "^3.0.1",
     "cors": "^2.8.5",
+    "jetifier": "^1.6.6",
     "js-cookie": "^2.2.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -54,6 +55,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -66,5 +68,10 @@
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-androidx-adapter": {}
+    }
+  }
 }
